feat(shift): add manager location access verification before retrieving location shifts